--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,68 +1,28 @@
-# Use index.php as a fallback when DirectoryIndex is not available
-DirectoryIndex index.php
-
-# Disable MultiViews to prevent content negotiation issues
-<IfModule mod_negotiation.c>
-    Options -MultiViews
-</IfModule>
-
-# Enable symbolic links and disable directory indexes
-<IfModule mod_rewrite.c>
-    Options +FollowSymLinks
-</IfModule>
-
-# URL Rewriting
+# --- MINIMALNY FRONT CONTROLLER + HTTPS ---
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
-    # Determine the RewriteBase automatically and set it as environment variable.
-    # If you are using Apache aliases to do mass virtual hosting or installed the
-    # project in a subdirectory, the base path will be prepended to allow proper
-    # resolution of the index.php file and to redirect to the correct URI. It will
-    # work in environments without path prefix as well, providing a safe, one-size
-    # fits all solution. But as you do not need it in this case, you can comment
-    # the following 2 lines to eliminate the overhead.
-    RewriteCond %{REQUEST_URI}::$0 ^(/.+)/(.*)::\2$
-    RewriteRule .* - [E=BASE:%1]
+    # Jeśli aplikacja jest w podkatalogu, zmień na np. /app/
+    RewriteBase /
 
-    # Force HTTPS (redirect HTTP to HTTPS)
-    RewriteCond %{HTTPS} !=on [OR]
-    RewriteCond %{HTTP:X-Forwarded-Proto} !=https
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    # --- WYMUSZENIE HTTPS (tu wstawiamy) ---
+    # Przekieruj tylko gdy NIE jest HTTPS i jednocześnie X-Forwarded-Proto != https
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https [NC]
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-    # Sets the HTTP_AUTHORIZATION header removed by Apache
-    RewriteCond %{HTTP:Authorization} .+
-    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
-
-    # Redirect to URI without front controller to prevent duplicate content
-    # (with and without /index.php). Only do this redirect on the initial
-    # rewrite by Apache and not on subsequent cycles. Otherwise we would get an
-    # infinite redirect loop (request -> rewrite to front controller ->
-    # redirect -> request -> ...).
-    # So in case you get a "too many redirects" error or you always get redirected
-    # to the start page because your Apache does not expose the REDIRECT_STATUS
-    # environment variable, you have 2 choices:
-    # - disable this feature by commenting the following 2 lines or
-    # - use Apache >= 2.3.9 and replace all L flags by END flags and remove the
-    #   following RewriteCond (best solution)
-    RewriteCond %{ENV:REDIRECT_STATUS} =""
-    RewriteRule ^index\.php(?:/(.*)|$) %{ENV:BASE}/$1 [R=301,L]
-
-    # If the requested filename exists, simply serve it.
-    # We only want to let Apache serve files and not directories.
-    RewriteCond %{REQUEST_FILENAME} -f
+    # Istniejące pliki/katalogi serwuj normalnie
+    RewriteCond %{REQUEST_FILENAME} -f [OR]
+    RewriteCond %{REQUEST_FILENAME} -d
     RewriteRule ^ - [L]
 
-    # Rewrite all other queries to the front controller.
-    RewriteRule ^ %{ENV:BASE}/index.php [L]
+    # Reszta do index.php
+    RewriteRule ^ index.php [QSA,L]
 </IfModule>
 
+# Awaryjny fallback, gdy brak mod_rewrite
 <IfModule !mod_rewrite.c>
-    <IfModule mod_alias.c>
-        # When mod_rewrite is not available, we instruct a temporary redirect of
-        # the start page to the front controller explicitly so that the website
-        # and the generated links can still be used.
-        RedirectMatch 307 ^/$ /index.php/
-        # RedirectTemp cannot be used instead
-    </IfModule>
+    # Jeśli .htaccess leży w tym samym katalogu co index.php i to jest root:
+    FallbackResource /index.php
+    # Jeśli to podkatalog, użyj np.: FallbackResource /app/index.php
 </IfModule>
