Update Redis DSN path in .env file

--- a/.env
+++ b/.env
@@ -45,5 +45,5 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> app/redis ###
-REDIS_DSN="redis:///home/srv97270/.redis/redis.sock?db=0"
+REDIS_DSN="redis:///home/example/.redis/redis.sock?db=0"
 ###< app/redis ###
